--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,22 +1,32 @@
-<!-- FOOTER -->
-    <footer>
-        <div class="icon-container"><img src="" alt="logo de la pagina"></div>
-        <div>
-            <ul class="redes">
-                <li class="icon-container"><a href=""><img src="../../../images/design/iconos/facebook.png" alt="icono Facebook"></a></li>
-                <li class="icon-container"><a href=""><img src="../../../images/design/iconos/instagram.png" alt="icono Instagram"></a></li>
-                <li class="icon-container"><a href=""><img src="../../../images/design/iconos/whatsapp.png" alt="icono whatsapp"></a></li>
-            </ul>
-            
+<footer>
+    <div class="footer-left">
+        <div class="logo-container">
+            <a href="/"><img src="" alt="logo de la pagina"></a>
+            <p>Godoy Iramain Matias 2025</p>
         </div>
-        <div>
-            <ul class="contact">
-                <li class="icon-container"><a
-                    href="mailto:godoyiramain01@gmail.com"><img src="../../../images/design/iconos/correo.png" alt="icono correo"></a></li>
-                <li class="icon-container"><a
-                        href="tel:+54 9 381 639-9663"><img src="../../../images/design/iconos/telefono.png" alt="icono telefono"></a></li>
-                <li class="icon-container"><img src="../../../images/design/iconos/punto.png" alt="icono direccion
-                "></li>
+    </div>
+    <div class="footer-middle">
+        <ul>
+            <li><a href="#">Acerca de la empresa</a></li>
+            <li><a href="#">Política de privacidad</a></li>
+            <li><a href="#">Términos y condiciones</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Preguntas frecuentes</a></li>
+        </ul>
+    </div>
+    <div class="footer-right">
+        <div class="payment-methods">
+            <p>Métodos de pago aceptados</p>
+            <ul class="payment-icons">
+                <li class="icon-container"><img src="../../../images/design/iconos/visa.png" alt="icono Visa"></li>
+                <li class="icon-container"><img src="../../../images/design/iconos/mastercard.png" alt="icono Mastercard"></li>
+                <li class="icon-container"><img src="../../../images/design/iconos/paypal.png" alt="icono Paypal"></li>
             </ul>
         </div>
-    </footer>
+        <ul class="social-icons">
+            <li class="icon-container"><a href="#"><img src="../../../images/design/iconos/facebook.png" alt="icono Facebook"></a></li>
+            <li class="icon-container"><a href="#"><img src="../../../images/design/iconos/instagram.png" alt="icono Instagram"></a></li>
+            <li class="icon-container"><a href="#"><img src="../../../images/design/iconos/whatsapp.png" alt="icono whatsapp"></a></li>
+        </ul>
+    </div>
+</footer>
