--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -4,6 +4,6 @@
     <title><%= title %></title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/general.css">
+    <link rel="stylesheet" href="/css/<%= style %>.css">
 </head>
